remove steps and update document